--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+*.swp
+*.swo
+.idea
+.gradle
+*.iml
 hs_err_pid*
+build
