--- a/build.gradle
+++ b/build.gradle
@@ -3,26 +3,9 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group = 'com.swrve'
+archivesBaseName = 'rate-limited-logger'
 version = '1.0'
 ext.packaging = 'jar'
-
-// see http://jedicoder.blogspot.ie/2011/11/automated-gradle-project-deployment-to.html
-def isDevBuild
-def isCiBuild
-def isReleaseBuild
-def sonatypeRepositoryUrl
-
-//set build variables based on build type (release, continuous integration, development)
-if(hasProperty("release")) {
-    isReleaseBuild = true
-    sonatypeRepositoryUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-} else if (hasProperty("ci")) {
-    isCiBuild = true
-    version += "-SNAPSHOT"
-    sonatypeRepositoryUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-} else {
-    isDevBuild = true
-}
 
 sourceCompatibility = 1.6
 
@@ -74,70 +57,61 @@ task all(dependsOn: [
 
 // ---------------------------------------------------------------------------
 
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from tasks.javadoc.destinationDir
+}
+
 task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
     classifier = 'sources'
 }
 
 artifacts {
-    archives jar
-    archives sourcesJar
+    archives jar, sourcesJar, javadocJar
 }
 
-if(isReleaseBuild) {
-    signing {
-        sign configurations.archives
-    }
-} else {
-    task signArchives {
-        // do nothing
-    }
+signing {
+    sign configurations.archives
 }
 
 uploadArchives {
     repositories {
-        if (isDevBuild) {
-            mavenLocal()
-        }
-        else {
-            mavenDeployer {
-                if(isReleaseBuild) {
-                    beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
+
+            pom.project {
+                name 'RateLimitedLogger'
+                packaging 'jar'
+                description 'RateLimitedLogger is an SLF4J-compatible, simple, fluent API for rate-limited logging in Java'
+                url 'https://github.com/Swrve/rate-limited-logger/'
+
+                scm {
+                    url 'scm:git@github.com:Swrve/rate-limited-logger.git'
+                    connection 'scm:git@github.com:Swrve/rate-limited-logger.git'
+                    developerConnection 'scm:git@github.com:Swrve/rate-limited-logger.git'
                 }
 
-                repository(url: sonatypeRepositoryUrl) {
-                  authentication(userName: sonatypeUsername, password: sonatypePassword)
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
                 }
 
-                pom.project {
-                   name 'RateLimitedLogger'
-                   packaging 'jar'
-                   description 'RateLimitedLogger is an SLF4J-compatible, simple, fluent API for rate-limited logging in Java'
-                   url 'https://github.com/Swrve/rate-limited-logger/'
-
-                   scm {
-                       url 'scm:git@github.com:Swrve/rate-limited-logger.git'
-                       connection 'scm:git@github.com:Swrve/rate-limited-logger.git'
-                       developerConnection 'scm:git@github.com:Swrve/rate-limited-logger.git'
-                   }
-
-                   licenses {
-                       license {
-                           name 'The Apache Software License, Version 2.0'
-                           url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                           distribution 'repo'
-                       }
-                   }
-
-                   developers {
-                       developer {
-                           id 'jmason'
-                           name 'Justin Mason'
-                           organization 'Swrve'
-                           organizationUrl 'http://www.swrve.com/'
-                       }
-                   }
-               }
+                developers {
+                    developer {
+                        id 'jmason'
+                        name 'Justin Mason'
+                        organization = 'Swrve'
+                        organizationUrl 'http://www.swrve.com/'
+                    }
+                }
             }
         }
     }
