Improve JMH benchmarks, add results to READMEs

--- a/jmh-tests/pom.xml
+++ b/jmh-tests/pom.xml
@@ -64,12 +64,22 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>com.swrve</groupId>
             <artifactId>rate-limited-logger</artifactId>
-            <version>1.0.1</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
         </dependency>
     </dependencies>
 
