--- a/jmh-tests/pom.xml
+++ b/jmh-tests/pom.xml
@@ -64,7 +64,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>com.swrve</groupId>
             <artifactId>rate-limited-logger</artifactId>
-            <version>1.1</version>
+            <version>99.9</version> <!-- see README.md; will force use of local build output -->
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
