Update gradle version

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ apply plugin: 'jacoco'
 
 task all(dependsOn: [
         test, findbugsMain, jacocoTestReport
-    ]) << { }
+    ]) doLast { }
 
 // ---------------------------------------------------------------------------
 
