Fix gradle 5 issue with signing jars

--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
-    archives jar, sourcesJar, javadocJar
+    archives sourcesJar, javadocJar
 }
 
 signing {
