--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ repositories {
 
 dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.7'
-    compile group: 'findbugs', name: 'annotations', version: '1.0.0'
-    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '2.0.2'
+    compileOnly group: 'findbugs', name: 'annotations', version: '1.0.0'
+    compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '2.0.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.2'
