--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ repositories {
 
 dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.7'
-    compileOnly group: 'findbugs', name: 'annotations', version: '1.0.0'
-    compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '2.0.2'
+
+    compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.1.4'
+    compileOnly group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.2'
