--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
-    archives jar, sourcesJar, javadocJar
+    archives sourcesJar, javadocJar
 }
 
 signing {
